--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	],
 	"require": {
 		"yiisoft/yii2": "*",
-		"kartik-v/yii2-widgets": "*"
+		"kartik-v/yii2-widgets": "*",
+		"behat/transliterator": "*"
 	},
 	"autoload": {
 		"psr-4": {
