--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	"require": {
 		"yiisoft/yii2": "*",
 		"kartik-v/yii2-widgets": "*",
-		"behat/transliterator": "*"
+		"behat/transliterator": "*",
+		"mongosoft/yii2-soap-server": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
